--- a/CACO_Patcher/CACO_Patcher.csproj
+++ b/CACO_Patcher/CACO_Patcher.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Mutagen.Bethesda.Skyrim" Version="0.39.5" />
-    <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.24.1" />
+    <PackageReference Include="Mutagen.Bethesda" Version="0.43.3" />
+    <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.27.0" />
   </ItemGroup>
 </Project>
